Fixes a bug in the spacing of layer edit links introduced in [] ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=64648342

--- a/resource/tab_panel.css
+++ b/resource/tab_panel.css
@@ -82,7 +82,7 @@ specific language governing permissions and limitations under the License.
   -webkit-overflow-scrolling:touch;
 }
 
-.cm-tab-content .cm-panel-links a {
+.cm-tab-content .cm-about-links a {
   display: inline-block;
   margin: 0 20px 0 0;
 }
